# awesome-rust-shuttle

./: Cargo.toml  README.md  example.Secrets.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/: config.rs  errors.rs  lib.rs  main.rs  utils.rs
src/routes/: health_check.rs
