[package]
name = "awesome-rust-shuttle"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cadunass/awesome-rust-shuttle"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-governor = "0.5.0"
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
bigdecimal = "0.4.5"
base64 = "0.21.0"
bytes = "1.5.0"
chrono = { version = "0.4.22", default-features = false, features = [
    "clock",
    "serde",
] }
futures = "0.3"
jsonwebtoken = "9.3.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.115", features = ["derive", "rc"] }
serde_yaml = "0.9.33"
serde_json = "1.0.113"
shuttle-actix-web = "0.57.0"
shuttle-runtime = "0.57.0"
shuttle-shared-db = { version = "0.57.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", default-features = false, features = [
    "macros",
    "postgres",
    "bigdecimal",
    "uuid",
    "chrono",
    "migrate",
    "postgres",
    "json",
] }
thiserror = "1.0.56"
tracing = "0.1"
tracing-actix-web = "0.6"
tokio = { version = "1.31", features = [
    "macros",
    "rt-multi-thread",
    "full",
    "time",
] }
validator = { version = "0.20", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "4.2.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
